# runeToolchain

./: .clang-format  .gitignore  Build-Freestanding-Compiler.sh  Build-Kernel-Toolchain.sh  Build-Userspace-Toolchain.sh  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Install-All.sh  Install-LibC.sh  Install.sh  LICENSE  README.md  Update-LibC.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: pull_request_template.md  ✨-feature-request.md  🐛-bug-report.md
Binutils/: config.sub
Binutils/bfd/: config.bfd
Binutils/gas/: configure.tgt
Binutils/ld/: Makefile.am  Makefile.in  configure.tgt
Binutils/ld/autom4te.cache/: output.0  requests  traces.0
GCC/: config.sub
GCC-Userspace/gcc/config/: rune.h
GCC-Userspace/libstdc++-v3/: crossconfig.m4
GCC/fixincludes/: mkfixinc.sh
GCC/gcc/: config.gcc
GCC/gcc/config/i386/: t-x86_64-rune
GCC/libgcc/: config.host
GCC/libstdc++-v3/: configure
LibC/: meson.build  x86_64-bootstrap.txt  x86_64-rune.txt
LibC/options/posix/include/: dlfcn.h  fcntl.h
LibC/sysdeps/rune/: meson.build
LibC/sysdeps/rune/Ember/: AppBits.cpp  Ember.cpp  Enum.cpp  MemoryBits.cpp  NodeDefinitions.cpp  PageProtection.cpp  StatusCode.cpp  SystemCallID.cpp  VFSBits.cpp  VirtualKey.cpp
LibC/sysdeps/rune/Forge/: App.cpp  Panic.cpp  Threading.cpp  Utility.cpp
LibC/sysdeps/rune/generic/: App.cpp  Memory.cpp  Panic.cpp  SystemCallPanic.cpp  Threading.cpp  VFS.cpp  entry.cpp  sysdeps.cpp
LibC/sysdeps/rune/include/Ember/: AppBits.h  Definitions.h  Ember.h  Enum.h  MemoryBits.h  NodeDefinitions.h  PageProtection.h  StatusCode.h  SystemCallID.h  VFSBits.h  VirtualKey.h
LibC/sysdeps/rune/include/Forge/: App.h  Memory.h  Panic.h  SystemCall.h  SystemCallPanic.h  Threading.h  TypeDef.h  Utility.h  VFS.h
LibC/sysdeps/rune/include/abi-bits/: access.h  auxv.h  blkcnt_t.h  blksize_t.h  clockid_t.h  dev_t.h  errno.h  fcntl.h  fsblkcnt_t.h  fsfilcnt_t.h  gid_t.h  in.h  ino_t.h  ioctls.h  ipc.h  limits.h  mode_t.h  mqueue.h  msg.h  nlink_t.h  pid_t.h  poll.h  resource.h  rlim_t.h  seek-whence.h  shm.h  sigevent.h  signal.h  sigval.h  socket.h  socklen_t.h  stat.h  statvfs.h  suseconds_t.h  termios.h  time.h  uid_t.h  utsname.h  vm-flags.h  wait.h
LibC/sysdeps/rune/include/rune/: App.h  Memory.h  SystemCall.h  SystemCallPanic.h  Threading.h  VFS.h
LibC/sysdeps/rune/mlibc-integration/: sysdeps.cpp
LibC/sysdeps/rune/x86_64/: SystemCall.cpp  crt1.S
Scripts/: Build-Freestanding-Compiler.sh  Build-Hosted-Compiler.sh  Update-LibC.sh
